--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <script src="https://unpkg.com/@metamask/detect-provider/dist/detect-provider.min.js"></script>
-
+    <script
+    src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
+    type="application/javascript"
+  ></script>
     <script type="text/javascript">
         async function detect() {
             const detector = await detectEthereumProvider();
@@ -10,6 +13,7 @@
         if (detector) {
           // handle provider
           console.log("Yes");
+          console.log("ethers");
         } else {
           // handle no provider
           console.log("No");
